# AudioWaterMarkKit

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  PRP.md  README.en.md  README.md  build.rs
.github/workflows/: build-audiowmark-macos-arm.yml  build-audiowmark-windows-release.yml  build-audiowmark-windows.yml  build-audiowmark-windows.yml.cygwin.bak  build-awmkit.yml  build-ffmpeg-runtime.yml  build-windows-deps.yml  check-ffi-bindings.yml  windows-winui.yml
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/AWMKit/: AWMKit.swift  Audio.swift  DatabaseStore.swift  Error.swift  KeyStore.swift  Keychain.swift  Message.swift  Tag.swift  UILanguageStore.swift
bindings/swift/Sources/CAWMKit/: shim.c
bindings/swift/Sources/CAWMKit/include/: awmkit.h  module.modulemap
bindings/swift/Tests/AWMKitTests/: AWMKitTests.swift  KeychainTests.swift
bundled/: .gitignore  audiowmark-macos-arm64.zst  audiowmark-macos-arm64.zst.sha256  audiowmark-windows-x86_64.exe.zst
docs/: AWMKIT_CI_PLAN.md  AWMKIT_CLI_PLAN.md  AWMKIT_GUI.md  AWMKIT_RELEASE_NOTES.md  dev-sync-workflow.md  i18n-keys.md  winui-acceptance.md  winui-data-contract.md  winui-design-tokens.md  winui-equivalence-spec.md  winui-publish-size-experiments.md
docs/en-US/: INDEX.md  TERMS.md
docs/en-US/cli/: terminology.md  usage.md
docs/en-US/gui/: first-run.md  macos-app.md  winui-app.md
docs/en-US/spec/: database-schema.md  message-and-key-slot.md
docs/en-US/troubleshooting/: common-issues.md
docs/en-US/ui/: terminology.md
docs/zh-CN/: INDEX.md  TERMS.md
docs/zh-CN/cli/: terminology.md  usage.md
docs/zh-CN/gui/: first-run.md  macos-app.md  winui-app.md
docs/zh-CN/spec/: database-schema.md  message-and-key-slot.md
docs/zh-CN/troubleshooting/: common-issues.md
docs/zh-CN/ui/: terminology.md
i18n/en-US/: awmkit.ftl
i18n/zh-CN/: awmkit.ftl
include/: awmkit.h
macos-app/: .swiftlint.yml  README.md  project.yml
macos-app/AWMKit/: Info.plist
macos-app/AWMKit/Resources/: Localizable.xcstrings
macos-app/AWMKit/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos-app/AWMKit/Sources/: AWMKitApp.swift  ContentView.swift
macos-app/AWMKit/Sources/Components/: AppBackground.swift  EntryRowStyle.swift  GlassCard.swift  HDRGlowText.swift  HoverBackground.swift  StatusCapsule.swift
macos-app/AWMKit/Sources/Components/Glass/: GlassButtonStyle.swift  GlassEffectContainer.swift  LiquidGlassProgressView.swift  LiquidGlassToggleStyle.swift
macos-app/AWMKit/Sources/Components/Rows/: FileEntryRow.swift
macos-app/AWMKit/Sources/DesignSystem/: DesignSystem.swift  GlassModifier.swift
macos-app/AWMKit/Sources/Localization/: Localizer.swift  UiErrorMapper.swift
macos-app/AWMKit/Sources/Models/: AppearanceMode.swift  LogEntry.swift  UILanguageOption.swift
macos-app/AWMKit/Sources/Storage/: AppSettingsStore.swift  DatabaseQueryStore.swift
macos-app/AWMKit/Sources/Utilities/: WindowConfigurator.swift
macos-app/AWMKit/Sources/ViewModels/: DetectViewModel.swift  EmbedViewModel.swift  KeyViewModel.swift  ProgressTracking.swift
macos-app/AWMKit/Sources/Views/: DetectView.swift  EmbedView.swift  KeyView.swift  StatusView.swift  TagsView.swift
packaging/windows/: inno.iss
scripts/: bootstrap_ffmpeg_macos.sh  bootstrap_ffmpeg_windows.ps1  build-zita-resampler-windows.sh  check_no_hardcoded_strings.sh  collect-dlls-windows.sh  local-build-test-win.ps1  patch-audiowmark-windows.sh  sync_ffi_headers.sh  sync_win_git.sh  sync_win_rsync_emergency.sh
scripts/release/: fixup-bundled-audiowmark-macos.sh  local-release-all.sh  local-release-macos.sh  local-release-win.ps1
src/: audio.rs  bundled.rs  charset.rs  error.rs  ffi.rs  lib.rs  message.rs  multichannel.rs  tag.rs
src/app/: app_settings_store.rs  audio_engine.rs  audio_proof.rs  bundled.rs  error.rs  evidence_store.rs  i18n.rs  keystore.rs  maintenance.rs  mod.rs  settings.rs  settings_store.rs  snr.rs  tag_store.rs
src/launcher/: extract.rs  lock.rs  mod.rs  payload.rs  spawn.rs
src/media/: adm_bwav.rs  adm_embed.rs  adm_routing.rs  ffmpeg_decode.rs  mod.rs
tests/: cli_contract_output.rs  cli_copy_contract.rs  i18n_keys.rs  ui_copy_contract.rs  ui_i18n_contract.rs
tools/ffmpeg/: build-macos-arm64.sh  build-windows-x64.ps1  manifest.json
winui-app/: .editorconfig  test-ffi.cs
winui-app/AWMKit/: AWMKit.csproj  App.xaml  App.xaml.cs  GlobalUsings.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
winui-app/AWMKit.Data.Tests/: AWMKit.Data.Tests.csproj  DatabaseStoreTests.cs
winui-app/AWMKit/Assets/: README.md
winui-app/AWMKit/Converters/: CommonConverters.cs
winui-app/AWMKit/Data/: AppDatabase.cs  AppSettingsStore.cs  EvidenceStore.cs  TagMappingStore.cs
winui-app/AWMKit/Localization/: AppStrings.cs  UiErrorMapper.cs
winui-app/AWMKit/Models/: ChannelLayoutOption.cs  DetectRecord.cs  DetectResult.cs  EmbedMappingOption.cs  EmbedRequest.cs  EvidenceRecord.cs  KeySlotSummary.cs  LogEntry.cs  TagMapping.cs
winui-app/AWMKit/Native/: AwmAudioHandle.cs  AwmBridge.cs  AwmDatabaseBridge.cs  AwmJsonContext.cs  AwmKeyBridge.cs  AwmNative.cs  AwmStructs.cs
winui-app/AWMKit/Pages/: DetectPage.xaml  DetectPage.xaml.cs  EmbedPage.xaml  EmbedPage.xaml.cs  KeyPage.xaml  KeyPage.xaml.cs  TagsPage.xaml  TagsPage.xaml.cs
winui-app/AWMKit/Strings/en-US/: Resources.resw
winui-app/AWMKit/Strings/zh-CN/: Resources.resw
winui-app/AWMKit/Styles/: DesignTokens.xaml
winui-app/AWMKit/ViewModels/: AppViewModel.cs  DetectViewModel.cs  EmbedViewModel.cs  KeyViewModel.cs  TagsViewModel.cs
