[package]
name = "awmkit"
version = "0.1.3"
edition = "2021"
description = "Audio watermarking toolkit - message encoding/decoding with HMAC authentication"
license = "GPL-3.0-or-later"
repository = "https://github.com/aspect-ratio/awmkit"
keywords = ["audio", "watermark", "hmac", "ffi"]
categories = ["multimedia::audio", "cryptography"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "awmkit"
path = "src/bin/awmkit/main.rs"
required-features = ["full-cli"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
thiserror = "2"
num-traits = "0.2"

[dev-dependencies]
hex = "0.4"

[features]
default = ["multichannel"]
ffi = []
cli = ["dep:clap", "dep:hex"]
multichannel = ["dep:hound", "dep:claxon", "dep:flacenc"]
ffmpeg-decode = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]
app = [
  "dep:dirs",
  "dep:hex",
  "dep:i18n-embed",
  "dep:i18n-embed-fl",
  "dep:unic-langid",
  "dep:fluent-bundle",
  "dep:rust-embed",
  "dep:once_cell",
  "dep:toml",
  "dep:rusqlite",
  "dep:rusty-chromaprint",
  "dep:keyring",
  "dep:rand",
  "dep:serde",
  "dep:serde_json",
  "multichannel",
  "ffmpeg-decode",
]
full-cli = [
  "app",
  "bundled",
  "ffi",
  "ffmpeg-decode",
  "dep:clap",
  "dep:glob",
  "dep:indicatif",
]
bundled = ["dep:zip"]

[dependencies.hound]
version = "3.5"
optional = true

[dependencies.claxon]
version = "0.4"
optional = true

[dependencies.ffmpeg-next]
version = "8"
default-features = false
features = ["codec", "format", "filter", "software-resampling"]
optional = true

[dependencies.ffmpeg-sys-next]
version = "8"
default-features = false
features = ["avcodec", "avformat", "avfilter", "swresample"]
optional = true

[dependencies.flacenc]
version = "0.5.1"
default-features = false
optional = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.hex]
version = "0.4"
optional = true

[dependencies.keyring]
version = "2.3"
optional = true

[dependencies.indicatif]
version = "0.17"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.glob]
version = "0.3"
optional = true

[dependencies.zip]
version = "0.6"
optional = true

[dependencies.i18n-embed]
version = "0.16"
optional = true
features = ["fluent-system", "desktop-requester", "rust-embed"]

[dependencies.i18n-embed-fl]
version = "0.10"
optional = true

[dependencies.unic-langid]
version = "0.9"
optional = true

[dependencies.fluent-bundle]
version = "0.16"
optional = true

[dependencies.rust-embed]
version = "8.5"
optional = true

[dependencies.once_cell]
version = "1.19"
optional = true

[dependencies.toml]
version = "0.8"
optional = true

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]
optional = true

[dependencies.rusty-chromaprint]
version = "0.3"
optional = true


[workspace]
members = ["."]


[target.'cfg(windows)'.dependencies.windows-dpapi]
version = "0.1"

[dependencies.dirs]
version = "5.0"
optional = true


[profile.release]
lto = true
strip = true
opt-level = "z"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# 禁止危险操作
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

# 错误处理
result_large_err = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# 代码质量
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
derive_partial_eq_without_eq = "warn"
empty_structs_with_brackets = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
iter_not_returning_iterator = "warn"
large_types_passed_by_value = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
# match_on_vec_items 已移除，由 indexing_slicing 覆盖
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mismatching_type_param_order = "warn"
missing_const_for_fn = "warn"
mut_mut = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
no_effect_underscore_binding = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add = "warn"
string_add_assign = "warn"
trait_duplication_in_bounds = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
uninlined_format_args = "warn"
unnecessary_join = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
verbose_bit_mask = "warn"
wildcard_imports = "warn"

# 文档
missing_docs_in_private_items = "warn"

# pedantic 中有用的
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_enums = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
implicit_hasher = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_is_variant_and = "warn"
many_single_char_names = "warn"
map_flatten = "warn"
maybe_infinite_iter = "warn"
module_name_repetitions = "warn"
must_use_candidate = "warn"
naive_bytecount = "warn"
needless_raw_string_hashes = "warn"
no_mangle_with_rust_abi = "warn"
option_as_ref_cloned = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
should_panic_without_expect = "warn"
similar_names = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
transmute_ptr_to_ptr = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
